# zipcode-coordinates-tz

./: .buildinfo  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree
.doctrees/zipcode_coordinates_tz/: cenus.doctree  models.doctree  postal.doctree  timezone.doctree
.github/workflows/: ci.yml  dependabotautomerge.yml  docs.yml  python-publish.yml
_sources/: index.rst.txt
_sources/zipcode_coordinates_tz/: cenus.rst.txt  models.rst.txt
docs/source/: conf.py  index.rst
docs/source/zipcode_coordinates_tz/: cenus.rst  models.rst  postal.rst  timezone.rst
geolocation/: __init__.py  __main__.py  census.py  constants.py  http.py  postal.py  timezone.py  utils.py
geolocation/commands/: __init__.py  save.py
notebooks/: Get NJ Timezones.ipynb
scripts/: check-all.sh  install-all.sh  mypy-precommit.sh  poetry-to-uv.sh  remove-python.sh  setup-uv.sh
tests/: test_census.py  test_constants.py  test_http.py  test_models.py  test_postal.py  test_timezone.py  test_utils.py
zipcode_coordinates_tz/: __init__.py  __main__.py  census.py  cenus.html  constants.py  http.py  models.html  models.py  postal.html  postal.py  timezone.html  timezone.py  utils.py
zipcode_coordinates_tz/commands/: __init__.py  common.py  save.py
