[project]
name = "zipcode-coordinates-tz"
version = "0.4.0"
description = "A Python package for querying US Zipcodes, and converting to coordinates and timezones"
authors = [
    {name = "Robert Colfin", email = "robert.m.colfin@gmail.com"},
]
readme = "README.md"
license = {text = "Apache"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "geolocation",
    "zipcodes",
    "census",
    "timezone",
    "timezone-converter",
    "postal-codes",
    "pytz",
    "usps",
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "aiofiles<25.0.0,>=24.1.0",
    "asyncclick<9.0.0.0,>=8.1.7.2",
    "backoff<3.0.0,>=2.2.1",
    "curl-cffi>=0.13.0",
    "openpyxl<4.0.0,>=3.1.5",
    "pytz<2026.0,>=2024.2",
    "timezonefinder>=6.5.7,<9.0.0",
    "xlrd<3.0.0,>=2.0.1",
    "pandas>=1"
]

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.11.2",
    "ruff<1.0.0,>=0.9.0",
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-ruff<1.0.0,>=0.4.1",
    "pytest-mypy>=0.10.3,<2.0.0",
    "types-aiofiles<25.0.0.0,>=24.1.0.20240626",
    "types-pytz<2026.0.0.0,>=2024.2.0.20241003",
    "pandas-stubs>=1",
    "sphinx-material<1.0.0,>=0.0.36",
    "jupyter<2.0.0,>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --mypy --ruff --ruff-format"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

line-length = 150
indent-width = 4
target-version = "py39"
namespace-packages = ["docs/source"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "RUF"
]
ignore = [

]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ERA001", "E402", "PLE1142", "T201"]

[tool.uv]
python-downloads = "manual"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
homepage = "https://github.com/rcolfin/zipcode-coordinates-tz"
